--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
+.wf-hannari { font-family: "Hannari"; }
 
 html,body {
   height: 100%;
