--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-.wf-hannari { font-family: "Hannari"; }
+@import url('https://fonts.googleapis.com/earlyaccess/hannari.css');
 
 html,body {
   height: 100%;
   width: 100%;
   font-family: 'inherit', inherit;
   color: #222;
+  font-family: "Hannari";
 }
 
 .navbar {
